--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="./index.css">
 </head>
 <body>
+    <button onclick="myFunction()">Button</button>
+    <script>
+        const myFunction=()=>{
+            console.log("button is clicked");
+        }
+    </script>
     <div id="root"></div>
     <script type="module" src="./src/App.js"></script>
 </body>
