--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
 </head>
 <body>
     <div id="root"></div>
+    <!-- <script>
+        console.log("before function")
+        setInterval(delay,2000);
+        function delay(){
+            console.log("this is delayed function")
+        }
+        console.log("after function")
+
+    </script> -->
     <script type="module" src="./src/App.js"></script>
 </body>
 </html>
